vscode and metal gitignore file configs

--- a/.gitignore
+++ b/.gitignore
@@ -157,4 +157,37 @@ Temporary Items
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,scala,intellij
+
+### VisualStudioCode ###
+.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
+
+# Created by https://www.toptal.com/developers/gitignore/api/metals
+# Edit at https://www.toptal.com/developers/gitignore?templates=metals
+
+### Metals ###
+.metals/
+.bloop/
+project/**/metals.sbt
+
+# End of https://www.toptal.com/developers/gitignore/api/metals
